# rl-tournament-notification-bot

./: .env.example  .gitignore  Dockerfile  README.md  deploy.env.example  deploy.sh  main.py  pyproject.toml
data/: v1-2026-06-14.html
docs/: implementation-plan.md
rltournamentbot/: bot.py  config.py  liquipedia.py  logger.py  models.py
