[project]
name = "rl-tournament-bot"
version = "0.1.0"
description = "Telegram bot that notifies about upcoming RLCS tournaments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml",
    "lxml[html_clean]",
]

[dependency-groups]
dev = ["pre-commit>=4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rltournamentbot"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["rltournamentbot"]

[tool.pyright]
venvPath = "."
venv = ".venv"
